--- a/client/components/Popups/EditMetadata/EditMetadata.module.css
+++ b/client/components/Popups/EditMetadata/EditMetadata.module.css
@@ -49,7 +49,7 @@
 .formGroup input:focus,
 .formGroup textarea:focus,
 .formGroup select:focus {
-	border-color: var(--main-color);
+	border-color: var(--primary);
 }
 
 .formGroup button:not([name]),
@@ -95,7 +95,7 @@
 }
 
 .formGroup input:focus {
-	border-color: var(--main-color);
+	border-color: var(--primary);
 }
 
 .formGroup button:not([name]),
@@ -134,7 +134,7 @@
 
 .footer button[type='submit'] {
 	margin-left: 10px;
-	background: var(--main-color);
+	background: var(--primary);
 }
 
 .footer button[type='reset'] {
