--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,40 +1,62 @@
 /* @import 'https://fonts.googleapis.com/icon?family=Material+Icons'; */
 
 :root {
-	color-scheme: light dark;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
-	font-size: 16px;
-	color: #bbb;
-
-	--main-color: #2596be; /* #00a4dc */
-	--main-color-hover: #30b1e0;
-	--main-color-focus: #40a4c6;
-
-	--bg-00dp: #121212;
-	--bg-01dp: #1e1e1e;
-	--bg-02dp: #232323;
-	--bg-03dp: #252525;
-	--bg-04dp: #272727;
-	--bg-06dp: #2c2c2c;
-	--bg-08dp: #2f2f2f;
-	--bg-12dp: #333;
-	--bg-16dp: #353535;
-	--bg-24dp: #383838;
-
 	--padding: 0.7em;
 	--font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
 		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
 		sans-serif;
 
-	--error: #cf6679;
-	--update-badge: rgb(219, 8, 8);
+	/* Logo: #5251a3 #ab2d3a #efcb41 #0b0619 */
 
-	--space-cadet: #1b1f35;
-	--rich-black: #131624;
-	--celtic-blue: #0069d9;
-	--redwood: #aa5042;
+	/* --background: #fffbfe; */
+	--background: #fafdff;
+	--on-background: #1c1b1f;
+
+	--primary: #1187ee;
+	--on-primary: #fff;
+	--primary-container: #cfe7fc;
+	--on-primary-container: #031b30;
+
+	/* --secondary: hsl(48, 84%, 60%); */
+	--secondary: #bc9910;
+	--on-secondary: #000;
+	--secondary-container: #fbf2d0;
+	--on-secondary-container: #2f2604;
+
+	--00dp: #fafdff;
+	--01dp: #fafdff;
+	--02dp: #fafdff;
+	--03dp: #fafdff;
+	--04dp: #fafdff;
+	--06dp: #fafdff;
+	--08dp: #fafdff;
+	--12dp: #fafdff;
+	--16dp: #fafdff;
+	--24dp: #fafdff;
+	--on-surface: #1a1c1e;
+	--surface-variant: #dfe6ec;
+	--on-surface-variant: #131a20;
+
+	--error: #b3261e;
+	--error-container: #f9dedc;
+	--on-error: #fff;
+	--on-error-container: #410e0b;
+
+	--outline: #79747e;
+	--outline-variant: #c4c7c5;
+
+	--shadow: #000;
+	--surface-tint-color: var(--primary);
+	--scrim: #000;
+
+	color-scheme: light dark;
+	font-family: var(--font-family);
+	font-size: 16px;
+	color: var(--on-background);
+	line-height: 1.35;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 * {
@@ -44,12 +66,7 @@
 }
 
 body {
-	line-height: 1.35;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	background-color: var(--space-cadet);
-	overflow-x: hidden;
+	background-color: var(--00dp);
 }
 
 button {
@@ -118,7 +135,7 @@ a {
 }
 
 .checkbox[data-ischecked='true'] {
-	background-color: var(--main-color);
+	background-color: var(--primary);
 }
 
 .checkbox[disabled] {
@@ -183,5 +200,68 @@ a {
 .formGroup input:focus,
 .formGroup textarea:focus,
 .formGroup select:focus {
-	border-color: var(--main-color);
+	border-color: var(--primary);
+}
+
+@media (prefers-color-scheme: dark) {
+	:root {
+		--background: #0f0f0f;
+		--on-background: #fafdff;
+
+		/* --primary: #1187ee; */
+		--primary: #54a9f3;
+		--on-primary: #000;
+		--primary-container: #031b30;
+		--on-primary-container: #e2e2e2;
+
+		/* --secondary:  */
+
+		--00dp: #121212;
+		--01dp: #1d1d1d;
+		--02dp: #212121;
+		--03dp: #242424;
+		--04dp: #262626;
+		--06dp: #2c2c2c;
+		--08dp: #2d2d2d;
+		--12dp: #323232;
+		--16dp: #353535;
+		--24dp: #373737;
+		--on-surface: #f7f7f7;
+		--on-surface-variant: #e9e9e9;
+
+		--outline: #938f99;
+		--outline-variant: #444746;
+
+		/* Material Design Defaults:
+		--primary: #d0bcff;
+		--primary-container: #4f378b;
+		--secondary: #ccc2dc;
+		--secondary-container: #4a4458;
+		--tertiary: #efb8c8;
+		--tertiary-container: #633b48;
+		--surface: #1c1b1f;
+		--surface-variant: #49454f;
+		--background: #1c1b1f;
+		--error: #f2b8b5;
+		--error-container: #8c1d18;
+		--on-primary: #371e73;
+		--on-primary-container: #eaddff;
+		--on-secondary: #332d41;
+		--on-secondary-container: #e8def8;
+		--on-tertiary: #492532;
+		--on-tertiary-container: #ffd8e4;
+		--on-surface: #e6e1e5;
+		--on-surface-variant: #cac4d0;
+		--on-error: #601410;
+		--on-error-container: #f9dedc;
+		--on-background: #e6e1e5;
+		--outline: #938f99;
+		--outline-variant: #444746;
+		--shadow: #000000;
+		--surface-tint-color: #d0bcff;
+		--inverse-surface: #e6e1e5;
+		--inverse-on-surface: #313033;
+		--inverse-primary: #6750a4;
+		--scrim: #000000; */
+	}
 }
