--- a/client/components/Dropdown/Dropdown.module.css
+++ b/client/components/Dropdown/Dropdown.module.css
@@ -1,5 +1,5 @@
 .dropdown {
-	background: var(--rich-black);
+	background: var(--06dp);
 	width: max-content;
 	z-index: 999;
 	cursor: auto;
@@ -8,6 +8,7 @@
 	visibility: hidden;
 	position: fixed;
 	border-radius: 0.5rem;
+	box-shadow: 0px 5px 9px 2px rgba(0, 0, 0, 0.25);
 }
 
 .dropdown:global(.visible) {
@@ -22,7 +23,6 @@
 	align-items: center;
 	font-size: 16px;
 	font-family: var(--font-family);
-	color: #fff;
 	text-align: left;
 	white-space: nowrap;
 }
@@ -43,12 +43,12 @@
 
 .item:not([disabled]):hover,
 .item:not([disabled]):global(.selected) {
-	background: rgba(255, 255, 255, 0.1);
+	background-color: rgba(255, 255, 255, 0.1);
 }
 
 .item:global(.noHover) {
 	cursor: default;
-	background: transparent !important;
+	background-color: transparent !important;
 }
 
 .item:global(.noPadding) {
@@ -58,7 +58,7 @@
 .divider {
 	width: 100%;
 	height: 1px;
-	background: #333;
+	background-color: var(--outline-variant);
 	margin: 5px 0;
 }
 
