--- a/client/components/HorizontalScrollContainer/HorizontalScrollContainer.module.css
+++ b/client/components/HorizontalScrollContainer/HorizontalScrollContainer.module.css
@@ -7,7 +7,6 @@
 }
 
 .title {
-	color: #cecece;
 	font-weight: 500;
 	font-size: 26px;
 	-webkit-user-select: none;
@@ -25,10 +24,10 @@
 }
 
 .buttons button {
-	width: 45px;
-	height: 45px;
+	font-size: 1.6rem;
+	padding: 0.6rem;
 	background-color: transparent;
-	color: #fff;
+	color: var(--on-background);
 	border: 0;
 	border-radius: 50%;
 	display: inline-flex;
@@ -39,12 +38,13 @@
 }
 
 .buttons button:not([disabled]):hover {
-	background-color: rgba(255, 255, 255, 0.1);
+	background-color: var(--primary-container);
+	color: var(--primary);
 }
 
 .buttons button[disabled=''] {
 	cursor: auto;
-	color: #333;
+	color: var(--outline-variant);
 }
 
 .scrollContainer {
