--- a/client/components/Dropdown/Dropdown.module.css
+++ b/client/components/Dropdown/Dropdown.module.css
@@ -1,5 +1,5 @@
 .dropdown {
-	background: var(--06dp);
+	background: var(--surface-0);
 	width: max-content;
 	z-index: 999;
 	cursor: auto;
@@ -9,6 +9,7 @@
 	position: fixed;
 	border-radius: 0.5rem;
 	box-shadow: 0px 5px 9px 2px rgba(0, 0, 0, 0.25);
+	border: 1px solid var(--divider-variant);
 }
 
 .dropdown:global(.visible) {
@@ -18,7 +19,7 @@
 .item {
 	padding: 0.8rem 2.5rem 0.8rem 1rem;
 	cursor: pointer;
-	transition: background 0.15s;
+	transition: background-color 0.15s;
 	display: flex;
 	align-items: center;
 	font-size: 16px;
@@ -58,7 +59,7 @@
 .divider {
 	width: 100%;
 	height: 1px;
-	background-color: var(--outline-variant);
+	background-color: var(--divider-variant);
 	margin: 5px 0;
 }
 
