--- a/client/styles/read.module.css
+++ b/client/styles/read.module.css
@@ -5,17 +5,13 @@
 }
 
 .title {
-	color: rgba(255, 255, 255, 0.7);
-	padding: 0.2em 0;
+	padding: 0.2rem 0.4rem;
 	font-weight: 100;
-	font-size: 1.5em;
+	font-size: 1.5rem;
 }
 
-/* .chapterSelect {
-} */
-
 .container {
-	height: 2.3em;
+	height: 2.3rem;
 	display: flex;
 	justify-content: space-between;
 }
@@ -26,7 +22,7 @@
 	align-items: center;
 	justify-content: center;
 
-	border: 1px solid #222;
+	border: 1px solid var(--divider);
 	background: transparent;
 	border-radius: 4px;
 	font-family: inherit;
@@ -42,7 +38,7 @@
 
 .pagination:not([disabled]):hover {
 	box-shadow: 0 1px 3px rgb(0 0 0 / 50%);
-	background: #303030;
+	background: rgba(255, 255, 255, 0.21);
 	cursor: pointer;
 }
 
@@ -51,11 +47,11 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	border: 1px solid var(--bg-02dp);
+	border: 1px solid var(--divider-variant);
 	background-color: transparent;
 	border-radius: 4px;
 	font-family: inherit;
-	transition: box-shadow, background-color 0.2s;
+	transition: box-shadow, background-color 0.15s;
 	user-select: none;
 	color: #fff;
 	padding: 5px;
@@ -83,7 +79,7 @@
 
 .button:not([disabled]):hover {
 	box-shadow: 0 1px 3px rgb(0 0 0 / 50%);
-	background-color: #303030;
+	background-color: rgba(255, 255, 255, 0.1);
 }
 
 .chapters {
