--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -42,20 +42,13 @@
 
 	--on-background: #fafdff;
 
-	--primary: #1967fc;
-	--primary-rgb: 25, 103, 252;
-	/* --primary-gradient: linear-gradient(
-		92.88deg,
-		#455eb5 9.16%,
-		#5643cc 43.89%,
-		#673fd7 64.72%
-	); */
+	/* --primary: #1967fc;
+	--primary-rgb: 25, 103, 252; */
+	--primary: #295dbf;
+	--primary-rgb: 41, 93, 191;
 	--primary-gradient: linear-gradient(90deg, #324eb1, #683edb);
-	--primary-shadow: rgb(80 63 205 / 50%) 0px 1px 40px;
+	--primary-shadow: rgba(80, 63, 205, 0.5) 0px 1px 40px;
 	--on-primary: #fff;
-
-	--secondary: #ed7117;
-	--on-secondary: #000;
 
 	--surface-0: #000212;
 	--surface-0-rgb: 0, 2, 18;
@@ -95,6 +88,7 @@
 body {
 	background-color: var(--surface-0);
 	color-scheme: dark;
+	min-height: 100vh;
 }
 
 button {
@@ -148,49 +142,79 @@ a {
 	font-family: 'Material Icons Outlined';
 }
 
-.button {
-	padding: 0.6rem 1.8rem 0.6rem 2rem;
-	border-radius: 10000px;
-	border: 0;
-	outline-color: transparent;
-	display: flex;
-	white-space: nowrap;
-	text-align: center;
-	align-items: center;
-	justify-content: center;
+[type='button']:not(:disabled),
+[type='reset']:not(:disabled),
+[type='submit']:not(:disabled),
+.btn:not(:disabled),
+button:not(:disabled) {
 	cursor: pointer;
 }
 
-.button.icon-right {
-	padding-right: 1.5rem;
+.btn {
+	background-color: transparent;
+	border: 1px solid transparent;
+	padding: 0.6rem 1.8rem 0.6rem 2rem;
+	font-size: 1rem;
+	border-radius: 10000px;
+	font-weight: 400;
+	line-height: 1.5;
+	text-align: center;
+	text-decoration: none;
+	cursor: pointer;
+	user-select: none;
+	outline-color: transparent;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	white-space: nowrap;
+	color: var(--on-background);
+	transition: all 0.15s;
 }
 
-.button.icon-left {
-	padding-left: 1.5rem;
-}
-
-.button.primary {
+.btn-primary {
 	background: var(--primary-gradient);
 	color: var(--on-primary);
-	transition: box-shadow 0.15s;
+	border: 0;
 }
 
-.button.primary:hover {
+.btn-primary:hover {
 	box-shadow: var(--primary-shadow);
 }
 
-.button.secondary {
+.btn-secondary {
 	background-color: rgba(255, 255, 255, 0.1);
 	border: 1px solid rgba(255, 255, 255, 0.05);
-	transition: background-color 0.15s;
 }
 
-.button.secondary:hover {
+.btn-secondary:hover {
 	background-color: rgba(255, 255, 255, 0.15);
 }
 
-.hidden {
-	visibility: hidden;
+.btn-sm {
+	padding: 0.375rem 0.85rem;
+	font-size: 0.95rem;
+}
+
+.btn-lg {
+	padding: 0.65rem 1.6rem;
+	font-size: 1.25rem;
+}
+
+.btn.icon-right {
+	padding-right: 24px;
+	padding-left: 34px;
+}
+
+.btn.icon-left {
+	padding-left: 24px;
+	padding-right: 34px;
+}
+
+.btn:disabled,
+.btn[disabled],
+.btn.disabled {
+	opacity: 0.65;
+	pointer-events: none;
 }
 
 .checkbox {
@@ -237,30 +261,27 @@ a {
 	flex-direction: column;
 }
 
-.formGroup:not(:last-child) {
-	margin-bottom: 1.8em;
-}
-
 .formGroup label {
 	user-select: none;
-	color: #bbb;
-	font-size: 1em;
-	margin-bottom: 0.25em;
+	color: rgba(255, 255, 255, 0.65);
+	font-size: 1rem;
+	margin-bottom: 0.25rem;
 	width: max-content;
 }
 
 .formGroup input[type='text'],
+.formGroup input[type='password'],
 .formGroup input[type='number'],
 .formGroup textarea,
 .formGroup select {
 	color: #bbb;
-	background-color: var(--surface-2);
-	border: 0.16em solid var(--outline-variant);
+	background-color: rgba(0, 0, 0, 0.45);
+	border: 0.16rem solid transparent;
 	outline: none;
-	border-radius: 0.2em;
-	padding: 0.4em 0.25em;
-	font-size: 1.1em;
-	font-family: Arial;
+	border-radius: 0.2rem;
+	padding: 0.4rem 0.25rem;
+	font-size: 1rem;
+	font-family: inherit;
 	width: 100%;
 }
 
