--- a/client/styles/LoginPopup.module.css
+++ b/client/styles/LoginPopup.module.css
@@ -6,32 +6,19 @@
 	text-align: center;
 }
 
-.title {
-	text-align: center;
+.googleBtn {
+	background-color: rgba(234, 67, 53, 0.35);
 }
 
-.divider {
-	display: flex;
-	align-items: center;
-	gap: 1rem;
+.googleBtn:hover {
+	background-color: rgba(234, 67, 53, 0.45);
 }
 
-.divider > div {
-	background-color: var(--outline-variant);
-	width: 100%;
-	height: 1px;
-}
-
-.divider > p {
-	color: var(--outline);
-}
-
-.container form input {
-	margin-bottom: 0.8rem;
-}
-
-.submit {
-	margin-top: 1.5rem;
+.icon {
+	margin-right: 1rem;
+	display: grid;
+	place-items: center;
+	font-size: 24px;
 }
 
 @media screen and (max-width: 32rem) {
