--- a/client/pages/admin/hosts/hosts.module.css
+++ b/client/pages/admin/hosts/hosts.module.css
@@ -1,12 +1,34 @@
-.pageContainer {
-	height: 100vh;
-	display: flex;
-	flex-direction: row;
+.infoCards {
+	display: grid;
+	grid-template-columns: repeat(4, calc(25% - 1.5rem));
+	gap: 2rem;
 }
 
-.main {
-	height: 100%;
-	width: 100%;
-	overflow-y: auto;
-	flex: 1;
+.infoCard {
+	background-color: #0d1530;
+	border-radius: 1rem;
+	padding: 1.5rem 2rem;
+	text-align: center;
+	box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.2);
+}
+
+.infoCard h1 {
+	line-height: 1.2;
+}
+
+@media screen and (max-width: 85rem) {
+	.infoCards {
+		grid-template-columns: repeat(2, calc(50% - 1rem));
+	}
+}
+
+@media screen and (max-width: 50rem) {
+	.infoCards {
+		grid-template-columns: repeat(1, 100%);
+		gap: 0.6rem;
+	}
+
+	.infoCard {
+		padding: 1rem 2rem;
+	}
 }
