--- a/client/components/navbars/DefaultNavbar/DefaultNavbar.module.css
+++ b/client/components/navbars/DefaultNavbar/DefaultNavbar.module.css
@@ -50,10 +50,11 @@
 .notificationCount {
 	position: absolute;
 	font-size: 0.7rem;
-	width: 1.2rem;
-	height: 1.2rem;
-	background-color: red;
-	border-radius: 50%;
+	min-width: 1.3rem;
+	height: 1.3rem;
+	border-radius: 99rem;
+	padding: 0 0.2rem;
+	background-color: #c20a0a;
 	top: -2px;
 	right: -2px;
 	display: grid;
