--- a/client/pages/mangas/[urlName]/manga.module.css
+++ b/client/pages/mangas/[urlName]/manga.module.css
@@ -83,25 +83,48 @@
 	margin: 1.5rem var(--padding);
 }
 
-.chapters {
-	width: calc(40vw + 40px);
+.bottomContainer {
+	margin-top: 3rem;
+	display: flex;
+	justify-content: space-between;
+	gap: 4rem;
+}
+
+.bottomContainer > div > h2 {
+	margin-bottom: 1rem;
+}
+
+.chaptersContainer {
+	flex: 1;
 	max-width: 100%;
+}
+
+.chapters {
 	overflow-y: auto;
 	display: flex;
 	flex-direction: column;
-	margin-top: 1rem;
-	gap: 2px;
-	background-color: rgba(255, 255, 255, 0.1);
+	background-color: rgba(255, 255, 255, 0.06);
 	border-radius: 0.6rem;
 }
 
 .chapters > a {
 	display: block;
 	padding: 0.3rem 10px;
+	color: var(--on-surface);
 }
 
 .chapters > a:hover {
-	background-color: rgba(255, 255, 255, 0.1);
+	background-color: rgba(255, 255, 255, 0.03);
+}
+
+.popularContainer {
+	width: calc(40% + 50px);
+}
+
+.popularMangas {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
 
 @media (max-width: 900px) {
@@ -125,5 +148,15 @@
 	.title h1 {
 		text-align: center;
 		font-size: 2rem;
+	}
+
+	.bottomContainer {
+		flex-direction: column;
+		gap: 2rem;
+	}
+
+	.chaptersContainer,
+	.popularContainer {
+		width: 100%;
 	}
 }
