Make page padding on smaller on small devices

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -267,3 +267,9 @@ button:not(:disabled) {
 .formGroup select:focus {
 	border-color: var(--primary);
 }
+
+@media screen and (max-width: 700px) {
+	:root {
+		--padding: 1rem;
+	}
+}
